# AI-Business-Automation-Platform

./: .gitignore  AGENT.md  README.md  docker-compose.yml  netlify.toml
.github/workflows/: ci.yml
backend/: .env  .env.example  .env.production.example  Dockerfile  alembic.ini  pyproject.toml
backend/ai_automation_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_tables.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/agents/: graph.py  state.py
backend/app/agents/nodes/: executor.py  intent_classifier.py  ir_generator.py  ir_validator.py  planner.py  schema_resolver.py  validator.py
backend/app/middleware/: auth.py
backend/app/models/: task.py  user.py
backend/app/routers/: auth.py  execute.py  tasks.py  ws.py
backend/app/schemas/: api_schemas.py  ir_schemas.py  task_schemas.py
backend/app/services/: llm_client.py  redis_client.py  task_service.py
backend/app/tools/: __init__.py  contract_tools.py  custom_tools.py  lead_tools.py  onboarding_tools.py
backend/scripts/: export_graph.py
docs/: deployment.md  langgraph_step6.md  langgraph_step7.md  langgraph_step8.md  layman_explanation.md  project_brief.md  workflow_graph.md
frontend/: .env.production.example  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  router.jsx
frontend/src/api/: client.js  showcaseApi.js  showcaseApi.test.js  tasks.js
frontend/src/components/: ProtectedRoute.jsx
frontend/src/config/: showcase.js
(+17 files in other folders)
